--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-    <h1>Welcome to the Products App</h1>
+    <h1>Welcome to the Movies App</h1>
     <p>Created by Sumedh Udar, N01580256</p>
   </div>
   
